cmake_minimum_required(VERSION 3.8)

project(dana VERSION 0.1)

set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_COLOR_MAKEFILE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS OFF)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(SEND_ERROR "In-source builds are not allowed.")
endif ()

add_subdirectory(external)

find_package(OpenGL REQUIRED)
find_package(SDL2 REQUIRED)
find_package(GLEW REQUIRED)

set(DANA_INCLUDE "${CMAKE_HOME_DIRECTORY}/src/include")
set(DANA_INCLUDE_DIRS ${DANA_INCLUDE} CACHE INTERNAL "DANA_INCLUDE_DIRS")

message(STATUS "DANA_INCLUDE_DIRS: ${DANA_INCLUDE_DIRS}")

include_directories(
  ${DANA_INCLUDE_DIRS}
  ${SDL2_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${PROJECT_SOURCE_DIR}/external/
)

set(DANA_LIBRARY ${OPENGL_LIBRARIES})
list(APPEND DANA_LIBRARY ${GLEW_LIBRARY})
list(APPEND DANA_LIBRARY ${SDL2_LIBRARY})
list(APPEND DANA_LIBRARY nanovg)
set(DANA_LIBRARIES ${DANA_LIBRARY} CACHE INTERNAL "DANA_LIBRARIES")

message(STATUS "DANA_LIBRARIES: ${DANA_LIBRARIES}")

add_subdirectory(src)
add_subdirectory(examples)

if (BUILD_TESTS)
  add_subdirectory(test)
endif()